# seimodel

./: LICENSE-MIT.txt  MANIFEST.in  PKG-INFO  README.md  README_dist.md  pyproject.toml
src/: make_assets.py
src/seimodel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
